--- a/public/index.html
+++ b/public/index.html
@@ -90,9 +90,8 @@
         <div class="container mx-auto px-6">
             <nav class="flex items-center justify-between">
                 <div class="flex items-center">
-                    <a href="#" class="flex items-center">
-                        <span class="text-3xl font-bold text-primary font-serif">RAIS</span>
-                        <span class="ml-2 text-xs bg-accent text-gray-900 px-2 py-1 rounded-full font-semibold">Premium</span>
+                    <a href="/" class="flex items-center">
+                        <img src="images/logo.png" alt="RAIS Logo" class="h-12">
                     </a>
                 </div>
                 
@@ -169,15 +168,15 @@
         <!-- Slideshow Background -->
         <div class="hero-slideshow absolute inset-0 w-full h-full z-0">
             <div class="hero-slide active">
-                <img src="/public/images/rice.png" class="w-full h-full object-cover object-center" alt="Rice Image 1">
+                <img src="images/rice.png" class="w-full h-full object-cover object-center" alt="Rice Image 1">
                 <div class="absolute inset-0 bg-gradient-to-r from-black/70 to-black/40 md:from-black/70 md:to-black/40"></div>
             </div>
             <div class="hero-slide">
-                <img src="/public/images/rice1.png" class="w-full h-full object-cover object-center" alt="Rice Image 2">
+                <img src="images/rice1.png" class="w-full h-full object-cover object-center" alt="Rice Image 2">
                 <div class="absolute inset-0 bg-gradient-to-r from-black/70 to-black/40 md:from-black/70 md:to-black/40"></div>
             </div>
             <div class="hero-slide">
-                <img src="/public/images/rice2.png" class="w-full h-full object-cover object-center" alt="Rice Image 3">
+                <img src="images/rice2.png" class="w-full h-full object-cover object-center" alt="Rice Image 3">
                 <div class="absolute inset-0 bg-gradient-to-r from-black/70 to-black/40 md:from-black/70 md:to-black/40"></div>
             </div>
         </div>
@@ -191,7 +190,7 @@
                     <p class="text-white text-lg sm:text-xl md:text-2xl mb-6 sm:mb-8 md:mb-10 max-w-2xl font-medium leading-relaxed">Experience the authentic taste of Kenya with our carefully selected premium rice varieties, delivered fresh to your doorstep.</p>
                     
                     <div class="flex flex-col sm:flex-row gap-4 sm:gap-6 mb-8 sm:mb-10 md:mb-12">
-                        <a href="/views/signup.html" class="bg-accent hover:bg-yellow-500 text-black font-bold text-lg sm:text-xl py-3 sm:py-4 px-6 sm:px-8 md:px-10 rounded-full transition duration-300 inline-block text-center shadow-lg hover:shadow-xl border-2 border-yellow-500 transform hover:scale-105">
+                        <a href="views/signup.html" class="bg-accent hover:bg-yellow-500 text-black font-bold text-lg sm:text-xl py-3 sm:py-4 px-6 sm:px-8 md:px-10 rounded-full transition duration-300 inline-block text-center shadow-lg hover:shadow-xl border-2 border-yellow-500 transform hover:scale-105">
                             Shop Now
                         </a>
                         <a href="#about" class="bg-white hover:bg-gray-100 text-primary font-bold text-lg sm:text-xl py-3 sm:py-4 px-6 sm:px-8 md:px-10 rounded-full transition duration-300 inline-block text-center shadow-lg hover:shadow-xl border-2 border-white transform hover:scale-105">
@@ -481,7 +480,7 @@
                     <p class="text-lg">Order now and get 20% off your first purchase with code: <span class="font-bold text-accent">RAIS20</span></p>
                 </div>
                 <div data-aos="fade-left">
-                    <a href="#contact" class="bg-white text-primary hover:bg-gray-100 font-bold py-3 px-8 rounded-full transition duration-300 inline-block">
+                    <a href="/views/signup.html" class="bg-white text-primary hover:bg-gray-100 font-bold py-3 px-8 rounded-full transition duration-300 inline-block">
                         Order Now
                     </a>
                 </div>
