--- a/public/index.html
+++ b/public/index.html
@@ -168,15 +168,15 @@
         <!-- Slideshow Background -->
         <div class="hero-slideshow absolute inset-0 w-full h-full z-0">
             <div class="hero-slide active">
-                <img src="images/rice.png" class="w-full h-full object-cover object-center" alt="Rice Image 1">
+                <img src="/public/images/rice.png" class="w-full h-full object-cover object-center" alt="Rice Image 1">
                 <div class="absolute inset-0 bg-gradient-to-r from-black/70 to-black/40 md:from-black/70 md:to-black/40"></div>
             </div>
             <div class="hero-slide">
-                <img src="images/rice1.png" class="w-full h-full object-cover object-center" alt="Rice Image 2">
+                <img src="/public/images/rice1.png" class="w-full h-full object-cover object-center" alt="Rice Image 2">
                 <div class="absolute inset-0 bg-gradient-to-r from-black/70 to-black/40 md:from-black/70 md:to-black/40"></div>
             </div>
             <div class="hero-slide">
-                <img src="images/rice2.png" class="w-full h-full object-cover object-center" alt="Rice Image 3">
+                <img src="/public/images/rice2.png" class="w-full h-full object-cover object-center" alt="Rice Image 3">
                 <div class="absolute inset-0 bg-gradient-to-r from-black/70 to-black/40 md:from-black/70 md:to-black/40"></div>
             </div>
         </div>
