--- a/public/index.html
+++ b/public/index.html
@@ -91,7 +91,7 @@
             <nav class="flex items-center justify-between">
                 <div class="flex items-center">
                     <a href="/" class="flex items-center">
-                        <img src="images/logo.png" alt="RAIS Logo" class="h-12">
+                        <img src="/public/images/logo.png" alt="RAIS Logo" class="h-12">
                     </a>
                 </div>
                 
